kube3-04/3/deploy-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  labels:
    app: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - name: nginx
        image: nginx:1.19
        volumeMounts:
        - name: configmap-vol
          mountPath: /usr/share/nginx/html
      volumes:
        - name: configmap-vol
          configMap:
            name: configmap-v1
