kube3-04/3/deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
  labels:
    app: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v2
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
      - name: nginx
        image: nginx:1.28
        volumeMounts:
        - name: configmap-vol
          mountPath: /usr/share/nginx/html
      volumes:
        - name: configmap-vol
          configMap:
            name: configmap-v2
