kube3-04/3/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-v1
spec:
  selector:
    app: v1
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
