kube3-04/3/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-v2
spec:
  selector:
    app: v2
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
